import { PhoneCameraApp } from "./PhoneCameraApp";

export class BasicCameraApp extends PhoneCameraApp {
  edit() {
    console.log("Basic editing features");
  }
}
