import { PhoneCameraApp } from "./PhoneCameraApp";

export class CameraPlusApp extends PhoneCameraApp {
  edit() {
    console.log("Extra snazzy photo editing features");
  }
}
