export interface ShareStrategy {
  share(): void;
}
